Fixed CSS for Dark Mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,9 +29,15 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
-html {
+
+[data-theme='dark'] html {
+  background-color: #1c1e21;
+}
+[data-theme='light'] html {
   background-color: #f8f1ea;
 }
+
+
 
 
 
